customize git workflow customize git ignore

--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_wandb_kaggle
+lib_name = nfwk
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
@@ -12,7 +12,7 @@ user = fredguth
 author = Fred Guth
 author_email = fredguth@fredguth.com
 # copyright = Put your copyright information here
-branch = {branch}
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
