--- a/settings.ini
+++ b/settings.ini
@@ -1,66 +1,30 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified
 host = github
 lib_name = nfwk
-# For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
-# company_name = nike
-
 user = fredguth
-# description = A description of your project
-# keywords = some keywords
+description = Template kaggle competition code using nbdev, fastai, wandb and kaggle api
+keywords = fastai2 nfwk kaggle wandb nbdev
 author = Fred Guth
 author_email = fredguth@fredguth.com
-# copyright = Put your copyright information here
+copyright = Frederico Guth
 branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
 language = English
-# Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = False
-# Add licenses and see current list in `setup.py`
 license = apache2
 # From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
 status = 1
-
-# Optional. Same format as setuptools requirements
-# requirements = 
-# Optional. Same format as setuptools console_scripts
-# console_scripts = 
-# Optional. Same format as setuptools dependency-links
-# dep_links = 
-
-###
-# You probably won't need to change anything under here,
-#   unless you have some special requirements
-###
-
-# Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
-nbs_path = .
+nbs_path = nbs
 doc_path = docs
-
 # Whether to look for library notebooks recursively in the `nbs_path` dir
-recursive = False
-
-# Anything shown as '%(...)s' is substituted with that setting automatically
+recursive = True
 doc_host =  https://%(user)s.github.io
-#For Enterprise Git pages use:  
-#doc_host = https://pages.github.%(company_name)s.com.  
-
-
 doc_baseurl = /%(lib_name)s/
-# For Enterprise Github pages docs use:
-# doc_baseurl = /%(repo_name)s/%(lib_name)s/
-
-git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
-# For Enterprise Github use:
-#git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
-
-
-
-lib_path = %(lib_name)s
-title = %(lib_name)s
+git_url = https://github.com/%(user)s/nbdev_wandb_kaggle/tree/%(branch)s/
+lib_path = nfwk
+title = nfwk
 
 #Optional advanced parameters
 #Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
