--- a/nbs/wandb/run-20210714_235025-w0qjkcrt/files/requirements.txt
+++ b/nbs/wandb/run-20210714_235025-w0qjkcrt/files/requirements.txt
@@ -31,6 +31,7 @@ dask==2021.6.2
 debugpy==1.3.0
 decorator==5.0.9
 defusedxml==0.7.1
+dill==0.3.4
 docker-pycreds==0.4.0
 docutils==0.15.2
 entrypoints==0.3
@@ -90,11 +91,13 @@ nbdev==1.1.14
 nbformat==5.1.3
 nest-asyncio==1.5.1
 networkx==2.5
+nfwk==0.0.1
 notebook==6.4.0
 numpy==1.19.5
 nvidia-ml-py3==7.352.0
 olefile==0.46
 packaging==20.9
+pandarallel==1.5.2
 pandas==1.2.5
 pandocfilters==1.4.2
 parso==0.8.2
@@ -105,6 +108,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 pillow==8.2.0
 pip==21.1.3
+plotly==5.1.0
 pluggy==0.13.1
 pooch==1.4.0
 preshed==3.0.5
@@ -128,6 +132,7 @@ pysocks==1.7.1
 pytest==6.2.4
 python-dateutil==2.8.1
 python-dotenv==0.18.0
+python-gdcm==3.0.9.0
 python-slugify==5.0.2
 pytz==2021.1
 pyu2f==0.1.5
@@ -143,6 +148,7 @@ s3transfer==0.3.7
 scikit-image==0.18.1
 scikit-learn==0.24.2
 scipy==1.5.3
+seaborn==0.11.1
 send2trash==1.7.1
 sentry-sdk==1.2.0
 setuptools==49.6.0.post20210108
@@ -156,6 +162,7 @@ spacy-legacy==3.0.6
 spacy==3.0.6
 srsly==2.4.1
 subprocess32==3.5.4
+tenacity==8.0.1
 terminado==0.10.1
 testpath==0.5.0
 text-unidecode==1.3
